finish patrol box and spwan

--- a/Ex3/Ex3/index.html
+++ b/Ex3/Ex3/index.html
@@ -128,6 +128,8 @@
         <script type="text/javascript" src="src/DyeWorld/Object/Head.js"></script>
         <script type="text/javascript" src="src/DyeWorld/Object/Wing.js"></script>
         <script type="text/javascript" src="src/DyeWorld/Object/Patrol.js"></script>
+        <script type="text/javascript" src="src/DyeWorld/Object/PatrolSet.js"></script>
+        <script type="text/javascript" src="src/DyeWorld/Object/DyePackSet.js"></script>
 
         <!--<script type="text/javascript" src="src/MyGame/ParticleLevel.js"></script>-->
         <!--<script type="text/javascript" src="src/MyGame/FireDemo.js"></script>-->
