--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -129,6 +129,7 @@
         <script type="text/javascript" src="src/Aftermath/Objects/Character.js"></script>
         <script type="text/javascript" src="src/Aftermath/Objects/Weapon.js"></script>
         <script type="text/javascript" src="src/Aftermath/Objects/Bullet.js"></script>
+        <script type="text/javascript" src="src/Aftermath/Objects/Wing.js"></script>
         <!--<script type="text/javascript" src="src/MyGame/MyGame.js"></script>-->
         <!--<script type="text/javascript" src="src/MyGame/ParticleLevel.js"></script>-->
         <!--<script type="text/javascript" src="src/MyGame/FireDemo.js"></script>-->
