--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -136,6 +136,7 @@
     <script type="text/javascript" src="src/Aftermath/Objects/Hero.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Trap.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
 
     <!--<script type="text/javascript" src="src/MyGame/MyGame.js"></script>-->
     <!--<script type="text/javascript" src="src/MyGame/ParticleLevel.js"></script>-->
