simple boss and new barrage

--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -137,6 +137,7 @@
     <script type="text/javascript" src="src/Aftermath/Objects/Trap.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Boss.js"></script>
 
     <!--<script type="text/javascript" src="src/MyGame/MyGame.js"></script>-->
     <!--<script type="text/javascript" src="src/MyGame/ParticleLevel.js"></script>-->
