add basic bullet

--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -138,6 +138,8 @@
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Boss.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Heart.js"></script>
+    <script type="text/javascript" src="src/Aftermath/ObjectSets/HeroBullet.js"></script>
 
     <!--<script type="text/javascript" src="src/MyGame/MyGame.js"></script>-->
     <!--<script type="text/javascript" src="src/MyGame/ParticleLevel.js"></script>-->
