--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GTCS Game Engine V3 Demo</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
+    <title>Aftermath</title>
+    <link rel="icon" type="image/x-icon" href="./assets/icon.png">
 
     <!-- the following says there are javascript source code contained in
          the external source files
