working on homepage

--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -161,7 +161,7 @@
 </head>
 
 <body onload="
-        var myGame = new MyGame();
+        var myGame = new HomePage();
         gEngine.Core.initializeEngineCore('GLCanvas', myGame);
      ">
 <div id="LoadingIconParent" style="width: 1280px; height:720px;margin: auto ;left: 0;right: 0;top:0;bottom: 0">
