--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -125,6 +125,9 @@
     <script type="text/javascript" src="src/Aftermath/HomePage.js"></script>
     <script type="text/javascript" src="src/Aftermath/GameLevel.js"></script>
     <script type="text/javascript" src="src/Aftermath/MyGame.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Acknowledgement.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Control.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Trophy.js"></script>
     <script type="text/javascript" src="src/Aftermath/ObjectSets/Barrage.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Character.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Weapon.js"></script>
