--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -136,6 +136,7 @@
 
     <!--TODO debug thing-->
     <script type="text/javascript" src="src/Aftermath/GameScene.js"></script>
+    <script type="text/javascript" src="src/Aftermath/HiddenLevel.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Hero.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Trap.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
