--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -133,7 +133,12 @@
     <script type="text/javascript" src="src/Aftermath/Level/LevelScene.js"></script>
     <script type="text/javascript" src="src/Aftermath/Level/GameState.js"></script>
     <script type="text/javascript" src="src/Aftermath/Level/Level_1_1.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Level/Level_1_2.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Level/Level_1_3.js"></script>
     <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
+    <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
+    <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
+    <script type="text/javascript" src="src/Aftermath/Level/LoseScene.js"></script>
 
     <script type="text/javascript" src="src/Aftermath/ObjectSets/Barrage.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Character.js"></script>
