finish the structure

--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -135,8 +135,9 @@
     <script type="text/javascript" src="src/Aftermath/Level/Level_1_1.js"></script>
     <script type="text/javascript" src="src/Aftermath/Level/Level_1_2.js"></script>
     <script type="text/javascript" src="src/Aftermath/Level/Level_1_3.js"></script>
-    <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
-    <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
+    <script type="text/javascript" src="src/Aftermath/Level/Level_2_1.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Level/Level_2_2.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Level/Level_2_3.js"></script>
     <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
     <script type="text/javascript" src="src/Aftermath/Level/LoseScene.js"></script>
 
