--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -155,6 +155,7 @@
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Boss.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Boss2.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Heart.js"></script>
     <script type="text/javascript" src="src/Aftermath/ObjectSets/HeroBullet.js"></script>
 
