--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -152,6 +152,7 @@
     <script type="text/javascript" src="src/Aftermath/HiddenLevel.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Hero.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Trap.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/TrapWall.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/SavePoint.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Boss.js"></script>
