--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -159,6 +159,7 @@
     <script type="text/javascript" src="src/Aftermath/Objects/Boss2.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Cat.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Heart.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/TextBlock.js"></script>
     <script type="text/javascript" src="src/Aftermath/ObjectSets/HeroBullet.js"></script>
 
     <!--<script type="text/javascript" src="src/MyGame/MyGame.js"></script>-->
