--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -157,9 +157,11 @@
     <script type="text/javascript" src="src/Aftermath/Objects/Platform.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Boss.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Boss2.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Boss3.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Cat.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Heart.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/TextBlock.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Objects/Book.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Dialogue.js"></script>
     <script type="text/javascript" src="src/Aftermath/ObjectSets/HeroBullet.js"></script>
 
