--- a/Project/public_html/index.html
+++ b/Project/public_html/index.html
@@ -140,6 +140,7 @@
     <script type="text/javascript" src="src/Aftermath/Level/Level_2_3.js"></script>
     <!--<script type="text/javascript" src="src/Aftermath/Level/"></script>-->
     <script type="text/javascript" src="src/Aftermath/Level/LoseScene.js"></script>
+    <script type="text/javascript" src="src/Aftermath/Level/FakeLoseScene.js"></script>
 
     <script type="text/javascript" src="src/Aftermath/ObjectSets/Barrage.js"></script>
     <script type="text/javascript" src="src/Aftermath/Objects/Character.js"></script>
